addapt size to window

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blue Bird</title>
 </head>
 <body>
-    <canvas id="canvas" width="800px" height="800px" style="border: solid lightblue;"></canvas>
+    <canvas id="canvas" style="border: solid lightblue;"></canvas>
     <script src="birdFly.js"></script>
 </body>
 </html>
